# effectbox_v2

./: .gitignore  .mxproject  CMakeLists.txt  README.md  effectbox_v2.ioc  gcc-arm-none-eabi.cmake  mx-generated.cmake
.github/: copilot-instructions.md
CM4/: CMakeLists.txt  mx-generated.cmake  stm32h747xx_flash_CM4.ld  stm32h747xx_sram2_CM4.ld
CM4/Src/: main.cpp
CM7/: CMakeLists.txt  mx-generated.cmake  stm32h747xx_flash_CM7.ld  stm32h747xx_sram1_CM7.ld
CM7/Inc/: app_common.h  audio_effect.h  audio_pipeline.h  biquad_filter_effect.h  biquad_fixed_effect.h  codec_volume_effect.h  cpu_burn_effect.h  dsp_utils.h  gain_effect.h  guitar_effects.h  guitar_tuning.h  lcd_utils.h  spectrum_analyzer.h  spectrum_display.h  stm32h747i_discovery_conf.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  yin_pitch_detector.h
CM7/Src/: audio_effects_mode.cpp  dsp_utils.cpp  guitar_tuning.cpp  lcd_utils.cpp  main.cpp  pitch_detection_mode.cpp  spectrum_analyzer_mode.cpp  spectrum_display.cpp  stm32_init.cpp  stm32h7xx_hal_msp.c  stm32h7xx_it.c
stm32h7_docs/STM32H747XI_DISCOVERY_USER_MANUAL/: STM32H747XI_DISCOVERY_USER_MANUAL_INDEX.md
stm32h7_docs/STM32H747_REFERENCE_MANUAL/: STM32H747_INDEX.md
stm32h7_docs/STM32_CORTEX_M4_PROGRAMMERS_MANUAL/: STM32_CORTEX_M4_INDEX.md
stm32h7_docs/STM32_CORTEX_M7_PROGRAMMERS_MANUAL/: STM32_CORTEX_M7_INDEX.md
tests/: CMakeLists.txt  README.md  test_audio_effect.cpp  test_audio_pipeline.cpp  test_gain_effect.cpp  test_guitar_tuning.cpp  test_main.cpp  test_yin_pitch.cpp
tests/mocks/: app_common.h  arm_math.h  stm32h7xx.h
(+326 files in other folders)
